--- a/css-study/1-basic/3-outter-style.html
+++ b/css-study/1-basic/3-outter-style.html
@@ -1,22 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
+    <title>Title</title>
 </head>
-<style>
-    h1{
-        font-size: 1rem;
-    }
-    h2{
-        font-size: 1.5rem;
-    }
-</style>
 <body>
-    <h1>안녕하세요</h1>
-    <h2>안녕하세요</h2>
+    <ul>
+        <li>사과</li>
+        <li>딸기</li>
+        <li>석류</li>
+        <li>체리</li>
+    </ul>
 </body>
 </html>
