--- a/css-study/practice/5-position-practice.html
+++ b/css-study/practice/5-position-practice.html
@@ -12,6 +12,7 @@
             width: 1200px;
             margin: 0 auto;
         }
+
         .header h1{
             font-size: 84px;
             background-color: #FDA533;
@@ -53,8 +54,12 @@
             text-decoration: underline;
             font-size: 14px;
         }
+        .container .left .menu a:hover{
+            color: #0000ee;
+        }
+
         .container .content{
-            width: 60%;
+            width: 55%;
             background-color: #DDDDDD;
             padding: 20px 10px;
             max-height: 600px;
@@ -81,8 +86,9 @@
             font-size: 14px;
             color: #123553;
         }
+
         .container .right{
-            width: 20%;
+            width: 25%;
             padding: 10px;
         }
         .container .right .txt{
@@ -100,6 +106,35 @@
         }
         .container .right .txt span:nth-child(2){
             color: #FDA533;
+        }
+        .container .right .link{
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+        .container .right .link li{
+            font-size: 13px;
+        }
+        .container .right .link li a{
+            font-weight: 500;
+            text-decoration: underline;
+            color: #000;
+        }
+        .container .right .link li a:hover{
+            color: #0000ee;
+        }
+
+        .footer{
+            background-color: #123553;
+            color: #fff;
+            text-align: center;
+            font-size: 13px;
+            font-weight: 600;
+            padding: 10px 0;
+        }
+        .footer a{
+            color: #fff;
+            text-decoration: underline;
         }
     </style>
 </head>
