--- a/my-first-page/index.html
+++ b/my-first-page/index.html
@@ -10,6 +10,78 @@
     <title>My first Website</title>
 </head>
 <body>
-
+    <header>
+        <h1 class="logo">
+            <a href="index.html">
+                <img src="img/logo.png" alt="logo image">
+            </a>
+        </h1>
+        <h2 class="intro">WELCOME</h2>
+        <a href="#" class="menu-open">
+            <span class="menu-txt">MENU</span>
+            <span class="bar-icon">
+                <i class="fas fa-bars"></i>
+            </span>
+        </a>
+        <nav class="gnb">
+            <a href="#" class="close">
+                <i class="fas fa-times"></i>
+            </a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Favorite</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="visual">
+            <div class="overlay"></div>
+            <div class="txt">
+                <p>Creative design with Hong Studio</p>
+                <h3>
+                    Website & APP, <br />Responsive Web and <br />Brand Identity
+                </h3>
+                <a href="#">See the work</a>
+            </div>
+        </section>
+    </main>
 </body>
+<script>
+    //버튼의 요소 노드 취득
+    const menuBtn = document.querySelector('header .menu-open');
+    const closeBtn = document.querySelector('.gnb .close');
+    const header = document.querySelector('header');
+
+    const gnb = document.querySelector('.gnb');
+
+    //클릭 이벤트 생성
+    menuBtn.addEventListener('click', () => {
+        gnb.classList.add('on');
+    });
+
+    closeBtn.addEventListener('click', () => {
+        gnb.classList.remove('on');
+    });
+
+    //
+    document.addEventListener('keyup', e => {
+        if (e.key === 'Escape') {
+            gnb.classList.toggle('on');
+        }
+    });
+
+    //스크롤 이벤트
+    window.addEventListener('scroll', () => {
+        header.classList.add('scroll')
+
+        if(window.scrollY === 0){
+            header.classList.remove('scroll')
+        }
+    });
+
+</script>
 </html>
